--- a/src/scss/modules/type-ahead.scss
+++ b/src/scss/modules/type-ahead.scss
@@ -57,7 +57,6 @@
 	}
 
 	.is-shadow {
-		z-index: 0;
 		color: gray;
 	}
 
